[package]
name = "zerunet"
version = "0.1.0"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = { version = "*", features = ["derive"] }
rmp-serde = "*"
rmp = "*"
serde_bytes = "*"
json_filter_sorted = { path = "json_filter_sorted" }
signatory = { version = "0.13", features = ["ecdsa"] }
signatory-ring = "0.13"
bitcoin = "*"
ripemd160 = "*"
secp256k1 = { version = "0.15.5", features = ["recovery", "rand"] }
base64 = "*"
rand = { version = "0.6.5", features = ["rand_os"] }
sha2 = "*"
hex = "*"
basex-rs = "0.1.1"
log = "0.4"
pretty_env_logger = "0.3"
env_logger = "0.6.2"
# rusqlite = "*"
actix = "*"
actix-web = "*"
actix-files = "*"
actix-web-actors = "*"
actix-http = "*"
derive_more = "*"
i2p = { git = "https://github.com/i2p/i2p-rs" }
reqwest = "*"
pulldown-cmark = "*"
futures = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
quick-xml = "0.17"
pnet = "*"
ipnetwork = "*"
clap = "*"
chrono = "*"
