[package]
name = "zerunet"
version = "0.1.0"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.40"
serde_derive = "*"
rmp-serde = "*"
rmp = "*"
serde_bytes = "*"
serde_tuple = "*"
json_filter_sorted = { path = "json_filter_sorted" }
signatory = { version = "*", features = ["ecdsa"] }
signatory-ring = "*"
bitcoin = "*"
ripemd160 = "*"
secp256k1 = { version = "*", features = ["recovery", "rand"] }
base64 = "*"
rand = { version = "*", features = ["rand_os"] }
sha2 = "*"
hex = "*"
basex-rs = "*"
log = "*"
pretty_env_logger = "*"
env_logger = "*"
rusqlite = "*"
actix = "*"
actix-web = "*"
actix-files = "*"
actix-web-actors = "*"
actix-http = "*"
derive_more = "*"
i2p = { git = "https://github.com/i2p/i2p-rs" }
reqwest = "*"
pulldown-cmark = "*"
futures = "*"
uuid = { version = ">= 0.8", features = ["serde", "v4"] }
regex = ">= 1"
quick-xml = ">= 0.17"
pnet = "*"
ipnetwork = "*"
clap = "*"
chrono = "*"
