[package]
name = "zerunet"
version = "0.1.0"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerucrypt = { path = "../zerucrypt" }
upnp_brunch = { path = "../upnpbrunch" }
zeronet_protocol = { path = "../zeronet_protocol" }
zerucontent = { path = "./zerucontent" }
json_filter_sorted = { path = "./json_filter_sorted" }
content_manager = { path = "./content_manager" }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.55"
serde_derive = "1.0.114"
serde_bytes = "0.11.5"
rmp-serde = "0.14.3"
rmp = "*"
secp256k1 = { version = "*", features = ["recovery", "rand"] }
base64 = "0.12.3"
rand = "*"
sha2 = "0.8.2"
hex = "0.4.2"
basex-rs = "*"
log = "0.4.8"
pretty_env_logger = "*"
env_logger = "*"
# rusqlite = "*"
# diesel = { version = "*", features = ["sqlite"] }
actix = "*"
actix-web = "*"
actix-files = "*"
actix-web-actors = "*"
actix-http = "*"
derive_more = "*"
i2p = { git = "https://github.com/i2p/i2p-rs" }
reqwest = "0.10.4"
pulldown-cmark = "*"
futures = "*"
uuid = { version = ">= 0.8", features = ["serde", "v4"] }
regex = ">= 1"
quick-xml = ">= 0.18"
pnet = ">= 0.26"
ipnetwork = "0.16.0"
clap = "2.33.1"
chrono = "0.4.11"
