[package]
name = "zerucontent"
version = "0.1.0"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerucrypt = { version = "*", registry = "cratez" }
json_filter_sorted = { path = "../json_filter_sorted" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "*"
serde_bytes = "*"
serde_derive = "*"
